--- a/css/styles.css
+++ b/css/styles.css
@@ -333,7 +333,7 @@ input[type=number] {
 }
 
 .table-wrapper {
-  display: inline-block;
+  display: none;
   max-width: 98%;
   padding: 16px;
   margin: 0px auto;
@@ -482,11 +482,11 @@ input[type=number] {
 
 .chart-wrapper {
   margin-top: 8px;
-  display: flex;
+  display: none;
   flex-wrap: wrap;
   height: 400px;
   width: 100%;
-  max-width: 1080px;
+  max-width: 90vw;
   justify-content: center;
 }
 
